err/hatta.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Hatta-1.6.7.egg-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/hatta'...
Compiling './lib/python3.5/site-packages/hatta/page.py'...
***   File "./lib/python3.5/site-packages/hatta/page.py", line 375
    except hatta.error.ForbiddenErr, e:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hatta/parser.py'...
***   File "./lib/python3.5/site-packages/hatta/parser.py", line 11
    EXTERNAL_URL_RE = re.compile(ur'^[a-z]+://|^mailto:', re.I | re.U)
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hatta/search.py'...
***   File "./lib/python3.5/site-packages/hatta/search.py", line 18
    word_pattern = re.compile(ur"""\w[-~&\w]+\w""", re.UNICODE)
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hatta/static'...
Listing './lib/python3.5/site-packages/hatta/templates'...
Listing './lib/python3.5/site-packages/hgdemandimport'...
Listing './lib/python3.5/site-packages/hgext'...
Listing './lib/python3.5/site-packages/hgext/convert'...
Listing './lib/python3.5/site-packages/hgext/fsmonitor'...
Listing './lib/python3.5/site-packages/hgext/fsmonitor/pywatchman'...
Listing './lib/python3.5/site-packages/hgext/highlight'...
Listing './lib/python3.5/site-packages/hgext/largefiles'...
Listing './lib/python3.5/site-packages/hgext/zeroconf'...
Listing './lib/python3.5/site-packages/hgext3rd'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mercurial'...
Listing './lib/python3.5/site-packages/mercurial/cext'...
Listing './lib/python3.5/site-packages/mercurial/cffi'...
Listing './lib/python3.5/site-packages/mercurial/default.d'...
Listing './lib/python3.5/site-packages/mercurial/help'...
Listing './lib/python3.5/site-packages/mercurial/help/internals'...
Listing './lib/python3.5/site-packages/mercurial/hgweb'...
Listing './lib/python3.5/site-packages/mercurial/httpclient'...
Listing './lib/python3.5/site-packages/mercurial/locale'...
Listing './lib/python3.5/site-packages/mercurial/locale/da'...
Listing './lib/python3.5/site-packages/mercurial/locale/da/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/de'...
Listing './lib/python3.5/site-packages/mercurial/locale/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/el'...
Listing './lib/python3.5/site-packages/mercurial/locale/el/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/fr'...
Listing './lib/python3.5/site-packages/mercurial/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/it'...
Listing './lib/python3.5/site-packages/mercurial/locale/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/ja'...
Listing './lib/python3.5/site-packages/mercurial/locale/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/pt_BR'...
Listing './lib/python3.5/site-packages/mercurial/locale/pt_BR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/ro'...
Listing './lib/python3.5/site-packages/mercurial/locale/ro/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/ru'...
Listing './lib/python3.5/site-packages/mercurial/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/sv'...
Listing './lib/python3.5/site-packages/mercurial/locale/sv/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_CN'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_TW'...
Listing './lib/python3.5/site-packages/mercurial/locale/zh_TW/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/mercurial/pure'...
Listing './lib/python3.5/site-packages/mercurial/templates'...
Listing './lib/python3.5/site-packages/mercurial/templates/atom'...
Listing './lib/python3.5/site-packages/mercurial/templates/coal'...
Listing './lib/python3.5/site-packages/mercurial/templates/gitweb'...
Listing './lib/python3.5/site-packages/mercurial/templates/json'...
Listing './lib/python3.5/site-packages/mercurial/templates/monoblue'...
Listing './lib/python3.5/site-packages/mercurial/templates/paper'...
Listing './lib/python3.5/site-packages/mercurial/templates/raw'...
Listing './lib/python3.5/site-packages/mercurial/templates/rss'...
Listing './lib/python3.5/site-packages/mercurial/templates/spartan'...
Listing './lib/python3.5/site-packages/mercurial/templates/static'...
Listing './lib/python3.5/site-packages/mercurial/thirdparty'...
Listing './lib/python3.5/site-packages/mercurial/thirdparty/attr'...
Listing './lib/python3.5/site-packages/mercurial-4.4.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/hatta'...
Listing './share/doc/hatta/examples'...
Compiling './share/doc/hatta/examples/extend_parser.py'...
Listing './share/locale'...
Listing './share/locale/ar'...
Listing './share/locale/ar/LC_MESSAGES'...
Listing './share/locale/cs'...
Listing './share/locale/cs/LC_MESSAGES'...
Listing './share/locale/da'...
Listing './share/locale/da/LC_MESSAGES'...
Listing './share/locale/de'...
Listing './share/locale/de/LC_MESSAGES'...
Listing './share/locale/el'...
Listing './share/locale/el/LC_MESSAGES'...
Listing './share/locale/es'...
Listing './share/locale/es/LC_MESSAGES'...
Listing './share/locale/et'...
Listing './share/locale/et/LC_MESSAGES'...
Listing './share/locale/fi'...
Listing './share/locale/fi/LC_MESSAGES'...
Listing './share/locale/fr'...
Listing './share/locale/fr/LC_MESSAGES'...
Listing './share/locale/hu'...
Listing './share/locale/hu/LC_MESSAGES'...
Listing './share/locale/ja'...
Listing './share/locale/ja/LC_MESSAGES'...
Listing './share/locale/lt'...
Listing './share/locale/lt/LC_MESSAGES'...
Listing './share/locale/pl'...
Listing './share/locale/pl/LC_MESSAGES'...
Listing './share/locale/ru'...
Listing './share/locale/ru/LC_MESSAGES'...
Listing './share/locale/sv'...
Listing './share/locale/sv/LC_MESSAGES'...
Listing './share/locale/vi'...
Listing './share/locale/vi/LC_MESSAGES'...
Listing './share/python-wheels'...
